--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-hooks": "^1.0.1",
     "react-icons": "^4.3.1",
+    "react-inlinesvg": "^2.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
@@ -27,6 +30,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-inlinesvg": "^1.0.0",
+    "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
